--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@bot-whatsapp/root",
-    "version": "0.0.1",
+    "version": "0.1.0",
     "description": "Bot de wahtsapp open source para MVP o pequeños negocios",
     "main": "app.js",
     "private": true,
@@ -23,7 +23,8 @@
         "dev:debug": "node --inspect ./example-app/app.js",
         "dev": "node ./example-app/app.js",
         "prepare": "npx husky install",
-        "preinstall": "npx only-allow yarn"
+        "preinstall": "npx only-allow yarn",
+        "release": "standard-version"
     },
     "workspaces": [
         "packages/bot",
@@ -52,6 +53,8 @@
     "repository": "https://github.com/leifermendez/bot-whatsapp",
     "license": "ISC",
     "devDependencies": {
+        "@commitlint/cli": "^17.3.0",
+        "@commitlint/config-conventional": "^17.3.0",
         "@rollup/plugin-commonjs": "^23.0.2",
         "@rollup/plugin-json": "^5.0.1",
         "@rollup/plugin-node-resolve": "^15.0.1",
@@ -71,6 +74,7 @@
         "rollup": "^3.2.3",
         "rollup-plugin-cleanup": "^3.2.1",
         "rollup-plugin-copy": "^3.4.0",
+        "standard-version": "^9.5.0",
         "uvu": "^0.5.6"
     },
     "packageManager": "yarn@3.3.0",
