--- a/package.json
+++ b/package.json
@@ -70,7 +70,8 @@
         "git-cz": "^4.9.0",
         "husky": "^8.0.2",
         "only-allow": "^1.1.1",
-        "prettier": "^2.7.1",
+        "prettier": "^2.8.0",
+        "pretty-quick": "^3.1.3",
         "prompts": "^2.4.2",
         "rimraf": "^3.0.2",
         "rollup": "^3.2.3",
