--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,3 +1,10 @@
 nodeLinker: node-modules
+
 npmPublishRegistry: 'https://registry.npmjs.org'
+
+plugins:
+    - path: .yarn/plugins/@yarnpkg/plugin-postinstall.cjs
+      spec: 'https://raw.githubusercontent.com/gravitywelluk/yarn-plugin-postinstall/master/bundles/%40yarnpkg/plugin-postinstall.js'
+
 yarnPath: .yarn/releases/yarn-3.3.0.cjs
+postinstall: npx husky install
