--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -9,10 +9,12 @@
     "license": "ISC",
     "dependencies": {
         "dotenv": "^16.0.3",
-        "mongodb": "^4.11.0"
+        "mongodb": "^4.11.0",
+        "mysql2": "^2.3.3"
     },
     "exports": {
         "./mock": "./lib/mock/index.cjs",
-        "./mongo": "./lib/mongo/index.cjs"
+        "./mongo": "./lib/mongo/index.cjs",
+        "./mysql": "./lib/mysql/index.cjs"
     }
 }
