--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "conventionalCommits.scopes": ["hook", "contributing", "cli"]
+    "conventionalCommits.scopes": ["hook", "contributing", "cli", "adapter"]
 }
