--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -29,10 +29,13 @@
     "@types/node": "latest",
     "@typescript-eslint/eslint-plugin": "5.43.0",
     "@typescript-eslint/parser": "5.43.0",
+    "autoprefixer": "10.4.11",
     "eslint": "8.28.0",
     "eslint-plugin-qwik": "0.14.1",
     "node-fetch": "3.3.0",
+    "postcss": "^8.4.16",
     "prettier": "2.7.1",
+    "tailwindcss": "^3.1.8",
     "typescript": "4.9.3",
     "vite": "3.2.4",
     "vite-tsconfig-paths": "3.5.0",
