--- a/.github/workflows/contributors.yml
+++ b/.github/workflows/contributors.yml
@@ -2,8 +2,10 @@ name: Add contributors
 on:
     schedule:
         - cron: '20 20 * * *'
+    push:
+        branches: [dev]
     pull_request:
-        branches: [main]
+        branches: [main, dev]
 
 jobs:
     add-contributors:
