ci(contributors): add username avatar

--- a/.github/workflows/contributors.yml
+++ b/.github/workflows/contributors.yml
@@ -8,17 +8,11 @@ on:
         branches: [main, dev]
 
 jobs:
-    add-contributors:
+    contrib-readme-job:
         runs-on: ubuntu-latest
+        name: A job to automate contrib in readme
         steps:
-            - uses: actions/checkout@v2
-            - uses: BobAnkh/add-contributors@master
-              with:
-                  CONTRIBUTOR: '### Contributors'
-                  COLUMN_PER_ROW: '6'
-                  ACCESS_TOKEN: ${{secrets.GITHUB_TOKEN}}
-                  IMG_WIDTH: '100'
-                  FONT_SIZE: '14'
-                  PATH: '/README.md'
-                  COMMIT_MESSAGE: 'docs(README): update contributors'
-                  AVATAR_SHAPE: 'round'
+            - name: Contribute List
+              uses: akhilmhdh/contributors-readme-action@v2.3.6
+              env:
+                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
