--- a/.github/workflows/contributors.yml
+++ b/.github/workflows/contributors.yml
@@ -14,5 +14,7 @@ jobs:
         steps:
             - name: Contribute List
               uses: akhilmhdh/contributors-readme-action@v2.3.6
+              with:
+                  image_size: 50
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
