--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "qrcode-terminal": "^0.12.0",
     "socket.io": "^4.5.1",
     "stormdb": "^0.6.0",
-    "whatsapp-web.js": "latest",
+    "whatsapp-web.js": "^1.18.4",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
