--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "mime-db": "^1.52.0",
     "moment": "^2.29.4",
     "mysql": "^2.18.1",
+    "pb-util": "^1.0.3",
     "qr-image": "^3.2.0",
     "qrcode-terminal": "^0.12.0",
     "socket.io": "^4.5.1",
