--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,10 @@
-name: Test / Coverage
+name: Bot CI
 
 on:
     push:
         branches: [dev]
     pull_request:
-        branches: [main]
+        branches: [main, dev]
 
 jobs:
     build:
@@ -20,7 +20,6 @@ jobs:
               uses: actions/setup-node@v3
               with:
                   node-version: ${{ matrix.node-version }}
-            - run: npm install
-            - run: npm run build --if-present
-            - run: npm run test.unit
-            - run: npm run test.coverage
+            - run: corepack enable
+            - name: Install NPM Dependencies
+              run: yarn install --immutable --network-timeout 300000
