ci(action): update

--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -10,8 +10,8 @@
     "dependencies": {
         "dotenv": "^16.0.3",
         "mongodb": "^4.11.0",
-        "stormdb": "^0.6.0",
-        "mysql2": "^2.3.3"
+        "mysql2": "^2.3.3",
+        "stormdb": "^0.6.0"
     },
     "exports": {
         "./mock": "./lib/mock/index.cjs",
