--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,7 @@ on:
     push:
         branches: [dev]
     pull_request:
-        branches: [main, dev]
+        branches: [main]
 
 jobs:
     build:
