--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "qrcode-terminal": "^0.12.0",
     "socket.io": "^4.5.1",
     "stormdb": "^0.6.0",
-    "whatsapp-web.js": "^1.18.4",
+    "whatsapp-web.js": "github:pedroslopez/whatsapp-web.js#fix-buttons-list",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
