--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
         "rollup": "^3.2.3",
         "rollup-plugin-cleanup": "^3.2.1",
         "rollup-plugin-copy": "^3.4.0",
+        "semver": "^7.3.8",
         "standard-version": "^9.5.0",
         "uvu": "^0.5.6"
     },
