--- a/packages/bot/package.json
+++ b/packages/bot/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@bot-whatsapp/bot",
-    "version": "0.0.1",
+    "version": "0.0.4-alpha.0",
     "description": "",
     "main": "./lib/bundle.bot.cjs",
     "scripts": {
