--- a/packages/create-bot-whatsapp/package.json
+++ b/packages/create-bot-whatsapp/package.json
@@ -1,6 +1,6 @@
 {
     "name": "create-bot-whatsapp",
-    "version": "0.0.1",
+    "version": "0.0.9-alpha.0",
     "description": "",
     "main": "./lib/bin/bundle.create.cjs",
     "dependencies": {
