--- a/starters/apps/base-wweb-memory/package.json
+++ b/starters/apps/base-wweb-memory/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "app.js",
     "scripts": {
-        "pre-copy": "cd .. && yarn run copy.lib example-app-base",
+        "pre-copy": "cd .. && yarn run copy.lib base-wweb-memory",
         "start": "node app.js"
     },
     "keywords": [],
