ci(version): :zap: updated versions every packages

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -82,7 +82,7 @@ jobs:
               run: |
                   git config --global user.name 'Leifer Mendez (githubaction)'
                   git config --global user.email 'leifermendez@users.noreply.github.com'
-                  git commit -am "Update versioning"
+                  git commit -am "ci(version): :zap: updated versions every packages"
                   git push
 
     ############ UNIT TEST ############
