--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -1,7 +1,8 @@
-name: BotWhatsapp CI
+name: BotWhatsapp Releases
 
 on:
     pull_request:
+        types: [closed]
         branches:
             - next-release
 
@@ -10,6 +11,7 @@ jobs:
     release:
         name: Release
         runs-on: ubuntu-latest
+        if: github.event.pull_request.merged == 'true'
         steps:
             - name: Checkout
               uses: actions/checkout@v3
