--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -1,8 +1,7 @@
 name: BotWhatsapp Releases
 
 on:
-    pull_request:
-        types: [closed]
+    push:
         branches:
             - next-release
 
@@ -11,7 +10,6 @@ jobs:
     release:
         name: Release
         runs-on: ubuntu-latest
-        if: github.event.pull_request.merged == 'true'
         steps:
             - name: Checkout
               uses: actions/checkout@v3
