--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -53,4 +53,4 @@ jobs:
               with:
                   github_token: ${{ secrets.GITHUB_TOKEN }}
                   message: 'ci(version): :zap: automatic - ${date} updated versions every packages'
-                  branch: 'next-release'
+                  branch: 'dev'
