--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -1,8 +1,9 @@
 name: BotWhatsapp Releases(DEV)
 
 on:
-    release:
-        types: [published]
+    push:
+        tags:
+            - 'v*.*.*'
 
 jobs:
     ############ RELEASE ############
