fix: fix dependencias
Se agregaron bot, cli, database y provider a las dependencias

--- a/starters/apps/base-twilio-memory/package.json
+++ b/starters/apps/base-twilio-memory/package.json
@@ -9,7 +9,11 @@
     },
     "keywords": [],
     "dependencies": {
-        "whatsapp-web.js": "^1.18.3"
+        "whatsapp-web.js": "^1.18.3",
+        "@bot-whatsapp/bot": "latest",
+        "@bot-whatsapp/cli": "latest",
+        "@bot-whatsapp/database": "latest",
+        "@bot-whatsapp/provider": "latest"
     },
     "author": "",
     "license": "ISC"
