--- a/packages/provider/package.json
+++ b/packages/provider/package.json
@@ -16,6 +16,7 @@
     "exports": {
         "./mock": "./lib/mock/index.cjs",
         "./twilio": "./lib/twilio/index.cjs",
-        "./web-whatsapp": "./lib/web-whatsapp/index.cjs"
+        "./web-whatsapp": "./lib/web-whatsapp/index.cjs",
+        "./venom": "./lib/venom/index.cjs"
     }
 }
