--- a/starters/apps/base-twilio-mongo/package.json
+++ b/starters/apps/base-twilio-mongo/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "bot-whatsapp-base",
+    "name": "bot-whatsapp-base-twilio-mongo",
     "version": "1.0.0",
     "description": "",
     "main": "app.js",
@@ -9,7 +9,9 @@
     },
     "keywords": [],
     "dependencies": {
-        "whatsapp-web.js": "^1.18.3",
+        "body-parser": "^1.20.1",
+        "polka": "^0.5.2",
+        "twilio": "^3.83.4",
         "@bot-whatsapp/bot": "latest",
         "@bot-whatsapp/cli": "latest",
         "@bot-whatsapp/database": "latest",
