--- a/starters/apps/base-wweb-memory/package.json
+++ b/starters/apps/base-wweb-memory/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "bot-whatsapp-base",
+    "name": "bot-whatsapp-base-wweb-memory",
     "version": "1.0.0",
     "description": "",
     "main": "app.js",
