--- a/packages/provider/package.json
+++ b/packages/provider/package.json
@@ -17,6 +17,7 @@
         "./mock": "./lib/mock/index.cjs",
         "./twilio": "./lib/twilio/index.cjs",
         "./web-whatsapp": "./lib/web-whatsapp/index.cjs",
-        "./venom": "./lib/venom/index.cjs"
+        "./venom": "./lib/venom/index.cjs",
+        "./baileys": "./lib/baileys/index.cjs"
     }
 }
