--- a/packages/docs/tsconfig.json
+++ b/packages/docs/tsconfig.json
@@ -16,6 +16,7 @@
     "outDir": "tmp",
     "noEmit": true,
     "types": ["node", "vite/client"],
+    "baseUrl": ".",
     "paths": {
       "~/*": ["./src/*"]
     }
