--- a/.github/ISSUE_TEMPLATE/test-case.yml
+++ b/.github/ISSUE_TEMPLATE/test-case.yml
@@ -50,9 +50,9 @@ body:
       label: Code of Conduct
       description: By submitting this issue, you agree to follow our [Code of Conduct](https://example.com)
       options:
-        - label: I agree to follow this project's Code of Conduct
-        - label: I agree to follow this project's Code of Conduct
-        - label: I agree to follow this project's Code of Conduct
+        - label: I agree to follow this prwoject's Code of Conduct
+        - label: I agree to follow this prqoject's Code of Conduct
+        - label: I agree to follow this prfoject's Code of Conduct
           required: true
 
   - type: textarea
